--- a/data/filetypes.html
+++ b/data/filetypes.html
@@ -11,7 +11,7 @@
 
 [settings]
 # default extension used when saving files
-#extension=html
+extension=html
 
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
