--- a/data/filetypes.html
+++ b/data/filetypes.html
@@ -53,7 +53,7 @@ jscript_comment=comment
 jscript_commentline=comment_line
 jscript_commentdoc=comment_doc
 jscript_number=number_1
-jscript_word=keyword_1
+jscript_word=default
 jscript_keyword=keyword_2
 jscript_doublestring=string_1
 jscript_singlestring=string_1
